--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <header>
     <h1>Vanlife Mutual Aid Fund</h1>
     <p>Decentralized support for nomads — powered by Bitcoin</p>
-    <img src="A_flat-style_digital_illustration_in_the_header_im.png" alt="Vanlifers contributing to Bitcoin pot">
+   <img src="vanlife-bitcoin.png" alt="Vanlifers contributing to Bitcoin pot">
   </header>
 
   <section>
