--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       margin-top: 1rem;
       font-size: 0.95rem;
     }
+    .image-container {
+      margin-top: 1rem;
+      text-align: center;
+    }
+    .image-container img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
     footer {
       text-align: center;
       padding: 1rem;
@@ -61,7 +70,7 @@
   <header>
     <h1>Vanlife Mutual Aid Fund</h1>
     <p>Decentralized support for nomads — powered by Bitcoin</p>
-   <img src="vanlife-bitcoin.png" alt="Vanlifers contributing to Bitcoin pot">
+    <img src="vanlife-bitcoin.png" alt="Vanlifers contributing to Bitcoin pot">
   </header>
 
   <section>
@@ -87,6 +96,9 @@
       <div class="example">
         <strong>Example:</strong> 5 trusted members hold keys. Any 3 must agree to release funds. This ensures security without central control.
       </div>
+      <div class="image-container">
+        <img src="multisig.png" alt="Multisig diagram illustration">
+      </div>
     </div>
 
     <div class="card">
@@ -111,6 +123,9 @@
       <p>As members contribute monthly and the Bitcoin price increases, the fund gains value even without more members. This allows the group to support larger or more frequent requests over time.</p>
       <div class="example">
         <strong>Example:</strong> In Year 1, the group helps one member with $500. By Year 3, the same monthly contributions plus BTC appreciation allow for three separate $500 claims per year without draining the fund.
+      </div>
+      <div class="image-container">
+        <img src="mutual_aid_example.png" alt="Chart showing Bitcoin mutual aid fund growth over time">
       </div>
     </div>
 
