--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <header>
     <h1>Vanlife Mutual Aid Fund</h1>
     <p>Decentralized support for nomads — powered by Bitcoin</p>
-    <img src="vanlife-bitcoin.png" alt="Vanlifers contributing to Bitcoin pot">
+    <img src="vanlife_bitcoin_2.png" alt="Vanlifers contributing to Bitcoin pot">
   </header>
 
   <section>
