--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section>
     <div class="card">
       <h2>What Is This?</h2>
-      <p>We’re building a mutual aid network for vanlifers: a shared emergency fund to help each other surviv on the road. Small monthly contributions from each member grow over time, and can be used when someone in the group needs support.</p>
+      <p>We’re building a mutual aid network for vanlifers: a shared emergency fund to help each other survive and thrive on the road. Small monthly contributions from each member grow over time, and can be used when someone in the group needs support.</p>
       <div class="example">
         <strong>Example:</strong> 10 members contribute $10/month (about 20,000 sats). That builds a $1,200 yearly fund to help cover breakdowns, urgent travel, or health costs.
       </div>
