--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <header>
     <h1>Vanlife Mutual Aid Fund</h1>
     <p>Decentralized support for nomads — powered by Bitcoin</p>
-    <img src="vanlife_bitcoin_2.png" alt="Vanlifers contributing to Bitcoin pot">
+    <img src="A_flat-style_digital_illustration_depicts_four_van.png" alt="Vanlifers contributing to Bitcoin pot">
   </header>
 
   <section>
@@ -113,8 +113,8 @@
       <h2>Transparency & Accountability</h2>
       <p>Every transaction can be publicly verified on the Bitcoin blockchain — anyone in the group can see when and where funds move. We also keep a simple shared log of all decisions, proposals, and votes. It’s all open and auditable by the community.</p>
       <div class="example">
-        <strong>Example:</strong> View wallet activity at <a href="https://mempool.space/address/bc1q9e9z6y69ps9d5quugrm69yyzrnnvquv2l4y8q4" target="_blank">mempool.space</a> using our example address: <code>bc1q9e9z6y69ps9d5quugrm69yyzrnnvquv2l4y8q4</code>.
-        <br>See a log of past votes and approvals in a shared Google Doc or Notion board.
+        <strong>Example:</strong> View wallet activity at <a href="https://mempool.space/address/bc1qxgz8q65rvfk9xp87xf8mlmlg5rrnswsaz8uszz" target="_blank">mempool.space</a> using our current demo wallet: <code>bc1qxgz8q65rvfk9xp87xf8mlmlg5rrnswsaz8uszz</code>.<br>
+        See a log of past votes and approvals in a shared Google Doc or Notion board.
       </div>
     </div>
 
@@ -136,7 +136,8 @@
   </section>
 
   <footer>
-    <p>Built by vanlifers, for vanlifers. Powered by freedom and sats — 2025.</p>
+    <p>Built by vanlifers, for vanlifers — 2025</p>
+    <p>Questions? Email Chuck - chklaz at gmail dot com</p>
   </footer>
 </body>
 </html>
