--- a/index.html
+++ b/index.html
@@ -165,4 +165,63 @@
   <section id="multisig">
     <div class="card">
       <h2>How Multisig Works</h2>
-      <p>The fund is held in a
+      <p>The fund is held in a <strong>multisig wallet</strong>: a shared vault that needs multiple people to approve a withdrawal. Think of it like a safe that takes 3 out of 5 keys to open. No one can spend the funds alone — decisions are made together.</p>
+      <div class="example">
+        <strong>Example:</strong> 5 trusted members hold keys. Any 3 must agree to release funds. This ensures security without central control.
+      </div>
+      <div class="image-container">
+        <img src="multisig.png" alt="Multisig diagram illustration">
+      </div>
+    </div>
+  </section>
+
+  <section id="claims">
+    <div class="card">
+      <h2>How Claims Work</h2>
+      <p>If someone needs help, they submit a simple request explaining their situation. The group discusses and, if enough signers approve (e.g. 3 out of 5), the funds are sent. It’s fast, fair, and based on community trust.</p>
+      <div class="example">
+        <strong>Example:</strong> Alex’s van breaks down in the desert. They message the group, share a repair quote, and 3 signers approve $400 in aid. Funds are released the same day.
+      </div>
+    </div>
+  </section>
+
+  <section id="transparency">
+    <div class="card">
+      <h2>Transparency & Accountability</h2>
+      <p>Every transaction can be publicly verified on the Bitcoin blockchain — anyone in the group can see when and where funds move. We also keep a simple shared log of all decisions, proposals, and votes. It’s all open and auditable by the community.</p>
+      <div class="example">
+        <strong>Live Demo Address:</strong>
+        View wallet activity at
+        <a href="https://mempool.space/address/bc1qxgz8q65rvfk9xp87xf8mlmlg5rrnswsaz8uszz" target="_blank">mempool.space</a>
+        using our current demo wallet:
+        <code>bc1qxgz8q65rvfk9xp87xf8mlmlg5rrnswsaz8uszz</code>.<br>
+        See a log of past votes and approvals in a shared Google Doc or Notion board.
+      </div>
+    </div>
+  </section>
+
+  <section id="growth">
+    <div class="card">
+      <h2>How Mutual Aid Grows Over Time</h2>
+      <p>As members contribute monthly and the Bitcoin price increases, the fund gains value even without more members. This allows the group to support larger or more frequent requests over time.</p>
+      <div class="example">
+        <strong>Example:</strong> In Year 1, the group helps one member with $500. By Year 3, the same monthly contributions plus BTC appreciation allow for three separate $500 claims per year without draining the fund.
+      </div>
+      <div class="image-container">
+        <img src="mutual_aid_example.png" alt="Chart showing Bitcoin mutual aid fund growth over time">
+      </div>
+    </div>
+  </section>
+
+  <section id="interested">
+    <div class="card">
+      <h2>Interested?</h2>
+      <p>If this resonates with you — whether you’re new to Bitcoin or already orange-pilled — come chat with us. We’re starting small and building trust-first. Let’s build the safety net we all wish existed.</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>Built by vanlifers, for vanlifers. Powered by freedom and sats — 2025.</p>
+  </footer>
+</body>
+</html>
